discussion/kv_engine/172336/172336_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Don't warmup vBuckets without state

It's possible for both couchstore and magma backends to create a
"vBucket" (header/KVStore respectively) without persisting the
vbucket_state. Warming up such a vBucket currently causes us to
warmup a vBucket with a defaul initialized vBucket state. Doing so
should be benign, ns_server should spot the vBucket in the incorrect
state post-warmup and correct it. If we were to have some IO error
during warmup though and we were to fail to persist the vBucket state
to disk during the PopulateVBMap phase of warmup then the subsequent
scan of the vBucket would find no vbucket_state and an exception would
be thrown. We'd already be in a bad state, having been unable to persist
something to disk, but the warmup would then be aborted and no more
items would be loaded into memory.

There is no point even trying to scan a vBucket in such a state, it
should not be possible for us to have a vBucket without a state that
actually has data, and such a vBucket is in an invalid state anyway.
Treat a vBucket in this state similary to one with a corrupt snapshot
and don't load it at all, ns_server will correct the vBucket states
post-warmup.

Change-Id: Iac6eb1c681c6ec8802900b66b1cbc2dc86f4901f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-16 10:41:52.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-16 10:42:10.000000000
Message: 
Topic set to 7.1.1
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-16 11:50:43.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16045/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16045/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16045/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14965/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index f50f53c35..1b65e67cd 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -120,7 +120,8 @@ public:
 
         updateLocalDocuments(*db, pendingLocalReqsQ);
 
-        errCode = couchstore_commit(db, [](const std::system_error&amp;){return true;});
+        errCode = couchstore_commit(
+                db, [](const std::system_error&amp;) { return true; });
 
         return !errCode;
     }
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 88a3b89df..0c0f2966d 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -893,7 +892,8 @@ TEST_P(KVStoreErrorInjectionTest, WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14965/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17813/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17813/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5760/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5760/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18134/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18134/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44498/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37460/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18845/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5702/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26220/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16884/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 08:13:18.000000000
Message: 
Topic 7.1.1 removed
----------------------------------------------------------------------------------------------------------------------
